# rustMicroservice

./: Cargo.toml
src/: main.rs
