[package]
name = "Microsevice1"
version = "0.1.0"
authors = ["Adam Mierzwiak <5563693+adamvm@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1"
hyper = "0.12"
slab = "0.4"
lazy_static = "1.0"
regex = "1.0"